# ogg-acm-codec-cmake

./: .gitmodules  CMakeLists.txt
cmake/: FindOgg.cmake  FindVorbis.cmake
src/: CMakeLists.txt
src/hmc/: CMakeLists.txt  accel.cpp  accel.h  acmdrv.cpp  acmdrv.h  com.cpp  com.h  dialog.cpp  dialog.h  driver.cpp  driver.h  link.cpp  link.h  menu.cpp  menu.h  mixer.cpp  mixer.h  mmutil.cpp  mmutil.h  module.cpp  module.h  registry.cpp  registry.h  string.h  sync.cpp  sync.h  time.cpp  time.h  util.cpp  util.h  window.cpp  window.h
src/vorbisacm/: CMakeLists.txt  codec.cpp  codec.h  decode.cpp  decode.h  dump.cpp  encode.cpp  encode.h  vorbisacm.h
